k8s/workers-light.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: workers-light
spec:
  replicas: 1
  selector:
    matchLabels:
      app: workers-light
  template:
    metadata:
      labels:
        app: workers-light
    spec:
      containers:
      - name: celery
        image: docker.io/goswamirohit/brresearepo:v1
        command: ["celery", "-A", "workers.celery_app", "worker", "-Q", "chunker,downloader,parser,storage", "--loglevel=info"]
        volumeMounts:
        - name: shared-storage
          mountPath: /app/storage
      volumes:
      - name: shared-storage
        persistentVolumeClaim:
          claimName: storage-pvc
